<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_warehouse_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kissroli02@gmail.com">kissr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_control</depend>
  <depend>navigation_manager</depend>
  <depend>gui_interface</depend>
  <depend>custom_interfaces</depend>
  <depend>sensor_processing</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
